# gerda-py

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/gerda/: __init__.py  _catalog.json  _fuzzy.py  cache.py  catalog.py  crosswalk.py  load.py
src/gerda/_data/: party_crosswalk.parquet
tests/: test_cache.py  test_catalog.py  test_crosswalk.py  test_fuzzy.py  test_load.py  test_load_network.py
tests/fixtures/: federal_cty_unharm_tiny.rds
